# 2026HCD-memory-map-ocr

./: .gitignore  2026-06-13 案A本実装仕様書.md  LICENSE  README.md  pyproject.toml  コーディングエージェント作業ログ.md
Codex-docs/: admin-review-implementation-plan.md  admin-review-kanban-spec.md  camera-yomitoku-gui.md  hcd-ocr-project-summary.md  japanese-ocr-plan.md  lab-pc-ocr-r2-plan.md  ocr-pipeline-runbook.md  ocr-test-data-inventory.md  public-card-r2-pipeline.md  sticky-note-ocr-plan.md  supabase-memories.sql  supabase-metadata-sync-plan.md  x1-local-webapp-plan.md  x1-webapp-ui-plan.md  yomitoku-quickstart.md  yomitoku-research.md  yomitoku-setup-result.md
Codex-scripts/: camera_yomitoku_gui.py  crop_sticky_notes.py  evaluate_yomitoku_outputs.py  generate_memory_card.py  process_webapp_captures.py  r2-smoke-test.json  run_yomitoku_cpu.py  sam_sticky_candidates.py  supabase_sync.py  upload_records_to_r2.py
WebApp/: README.md  package-lock.json  package.json
WebApp/src/app/: globals.css  icon.tsx  layout.tsx  page.tsx
WebApp/src/app/admin/: page.tsx
WebApp/src/app/admin/review-prototype/: page.tsx
WebApp/src/app/api/captures/: route.ts
WebApp/src/app/api/captures/[fileName]/: route.ts
WebApp/src/app/api/records/: route.ts
WebApp/src/app/api/records/[id]/: route.ts
WebApp/src/app/api/records/[id]/actions/: route.ts
WebApp/src/app/prototypes/capture-ui/: page.tsx
WebApp/src/components/: admin-dashboard.tsx  admin-review-board.tsx  admin-review-prototype.tsx  capture-form.tsx  capture-ui-prototypes.tsx
WebApp/src/lib/: records.ts
