[project]
name = "japanese-ocr"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.29",
    "httpx>=0.28.1",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "ultralytics>=8.4.66",
    "yomitoku>=0.13.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
